--- a/src/app/pages/ui-components/products/products.component.scss
+++ b/src/app/pages/ui-components/products/products.component.scss
@@ -3,6 +3,7 @@
     white-space: nowrap; /* Ngăn xuống dòng */
     overflow: hidden; /* Ẩn phần nội dung vượt quá */
     text-overflow: ellipsis; /* Hiển thị dấu "..." nếu nội dung bị cắt */
+    text-align: center;
   }
   
   /* Tùy chỉnh kích thước cột nếu cần */
