--- a/src/app/pages/ui-components/orders/order-detail/order-details.component.html
+++ b/src/app/pages/ui-components/orders/order-detail/order-details.component.html
@@ -1,165 +1,171 @@
 <div class="bg-page">
-  <mat-card class="order-card" *ngIf="order">
+  <mat-card class="order-card" *ngIf="orderDetail">
     <!-- Header -->
     <mat-card-header class="order-header" [ngClass]="{ 'running-bg': isRunning }">
-      <mat-card-title class="order-title">
-        Order Code: {{ order.code }} 
-        <p *ngIf="isRunning" class="running-text">
-         Running | Qty (Bags): 75 / {{ order.unitOrder }}
-        </p>
-      </mat-card-title>
 
+      <mat-card-title class="order-title">
+        {{ orderDetail.order.orderCode }}
+      </mat-card-title>
+      <div *ngIf="isRunning" class="header-content">
+        <span *ngIf="dataSensorByLine" class="running-text">
+          Running | Qty (Bags): {{dataSensorByLine.value}} / {{ orderDetail.requestedUnits }}
+        </span>
+      </div>
     </mat-card-header>
 
     <!-- Sensor -->
     <mat-card-content class="order-content">
-      <!-- Giá trị cảm biến -->
-      <!-- <div class="info-section" *ngIf="isRunning">
-        <h3 class="section-title running">Running Sensor</h3>
-        <div class="info-grid" *ngIf="runningSensor">
-          <div class="info-item">
-            <span class="label">Quantity:</span>
-            <p >{{ runningSensor.value }}</p>
-          </div>
-          <div class="info-item">
-            <span class="label">Line:</span>
-            <p>{{ runningSensor.line }}</p>
-          </div>
-          <div class="info-item">
-            <span class="label">Time:</span>
-            <p>{{currentTime }}</p>
-          </div>
-        </div>
-      </div> 
-      <div class="info-section">
-        <h3 class="sensor-title completed">
-          Completed Sensor
-          <button class="toggle-btn" (click)="isCollapsed = !isCollapsed">
-            {{ isCollapsed ? 'Show' : 'Hide' }}
-            <span [ngClass]="{'arrow-up': !isCollapsed, 'arrow-down': isCollapsed}"></span>
-          </button>
-        </h3>
-        <div class="info-grid" [ngClass]="{'collapsed': isCollapsed}">
-          <table class="sensor-table">
-            <thead>
-              <tr>
-                <th>Quantity</th>
-                <th>Line</th>
-                <th>Time</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let item of completedSensors">
-                <td>{{ item.value }}</td>
-                <td>{{ item.line }}</td>
-                <td>{{ item.time | date: 'dd/MM/yyyy HH:mm' }}</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>  -->
-      
-      
 
       <!-- General Information -->
       <div class="info-section">
-        <h3 class="section-title">General Information</h3>
-        <div class="info-grid">
-          <div class="info-item">
-            <span class="label">Export Date:</span>
-            <span class="value">{{ order.exportDate | date: 'dd/MM/yyyy' }}</span>
-          </div>
-          <div class="info-item">
-            <span class="label">Status:</span>
-            <span class="value" [ngClass]="getStatusClass(order.status)">
-              {{ getStatusText(order.status) }}
-            </span>
-          </div>
-          
+        <div class="section-header">
+          <h3 class="section-title">General Information</h3>
+          <button class="toggle-btn" (click)="toggleExpand()">
+            {{ isExpanded ? 'Collapse' : 'Expand' }}
+          </button>
         </div>
-        <div class="info-grid">
-          <div class="info-item">
-            <span class="label">Quantity (Bags):</span>
-            <span class="value">{{ order.unitOrder }} bags</span>
+
+        <div class="info-content" *ngIf="isExpanded">
+          <div class="info-grid">
+            <div class="info-item">
+              <span class="label">Export Date:</span>
+              <span class="value">{{ orderDetail.order.exportDate | date: 'dd/MM/yyyy' }}</span>
+            </div>
+            <div class="info-item">
+              <span class="label">Status:</span>
+              <span class="value" [ngClass]="getStatusClass(orderDetail.order.status)">
+                {{ getStatusText(orderDetail.order.status) }}
+              </span>
+            </div>
           </div>
-          <div class="info-item">
-            <span class="label">Weight (Kg):</span>
-            <span class="value">{{ order.weightOrder }} kg</span>
+          <div class="info-grid">
+            <div class="info-item">
+              <span class="label">Quantity Request (Bags):</span>
+              <span class="value">{{ orderDetail.requestedUnits }} bags</span>
+            </div>
+            <div class="info-item">
+              <span class="label">Weight Request (Kg):</span>
+              <span class="value">{{ orderDetail.requestedWeight }} kg</span>
+            </div>
+          </div>
+          <div class="info-grid">
+            <div class="info-item">
+              <span class="label">Driver Name:</span>
+              <span class="value">{{ orderDetail.order.driverName }}</span>
+            </div>
+            <div class="info-item">
+              <span class="label">Phone Number:</span>
+              <span class="value">{{ orderDetail.order.driverPhoneNumber }}</span>
+            </div>
+          </div>
+          <div class="info-grid">
+            <div class="info-item">
+              <span class="label">Vehicle Number:</span>
+              <span class="value">{{ orderDetail.order.vehicleNumber }}</span>
+            </div>
+            <div class="info-item">
+              <span class="label">Driver Count:</span>
+              <span class="value">{{ orderDetail.order.driverNumber }}</span>
+            </div>
           </div>
         </div>
       </div>
 
       <!-- Driver Information -->
-      <div class="info-section">
+      <!-- <div class="info-section">
         <h3 class="section-title">Driver Information</h3>
-        <div class="info-grid">
-          <div class="info-item">
-            <span class="label">Driver Name:</span>
-            <span class="value">{{ order.driverName }}</span>
-          </div>
-          <div class="info-item">
-            <span class="label">Phone Number:</span>
-            <span class="value">{{ order.driverPhoneNumber }}</span>
-          </div>
-          <div class="info-item">
-            <span class="label">Vehicle Number:</span>
-            <span class="value">{{ order.vehicleNumber }}</span>
-          </div>
-          <div class="info-item">
-            <span class="label">Driver Count:</span>
-            <span class="value">{{ order.quantityVehicle }}</span>
-          </div>
-        </div>
-      </div>
+        
+      </div> -->
 
-    <!-- Product Information -->
-    <div class="info-section">
-      <h3 class="section-title">Product Information</h3>
-      <div class="info-grid">
-        <div class="info-item">
-          <span class="label">Product Name:</span>
-          <span class="value">{{ order.productInformation.productName }}</span>
-        </div>
-        <div class="info-item">
-          <span class="label">Quantity (Bags):</span>
-          <span class="value">{{ order.unitOrder }} bags</span>
-        </div>
-        <div class="info-item">
-          <span class="label">Weight (Kg):</span>
-          <span class="value">{{ order.weightOrder }} kg</span>
-        </div>
-        <div class="info-item">
-          <span class="label">Manufacture Date:</span>
-          <span class="value">
-            {{ order.manufactureDate | date: 'dd/MM/yyyy' }}
-          </span>
-
-        </div>
-      </div>
-
-      <!-- Distributor Information -->
+      <!-- Product Information -->
       <div class="info-section">
-        <h3 class="section-title">Distributor Information</h3>
-        <div class="info-grid">
-          <div class="info-item">
-            <span class="label">Distributor Name:</span>
-            <span class="value">{{ order.distributor.distributorName }} - {{ order.distributor.area }}</span>
+        <div class="section-header">
+          <h3 class="section-title">Product Information</h3>
+          <button class="toggle-btn" (click)="toggleExpand()">
+            {{ isExpanded ? 'Collapse' : 'Expand' }}
+          </button>
+        </div>
+        <div class="info-content" *ngIf="isExpanded">
+          <div class="info-grid">
+            <div class="info-item">
+              <span class="label">Product Name:</span>
+              <span class="value">{{ orderDetail.productInformation.productName }}</span>
+            </div>
           </div>
-          <!-- <div class="info-item">
-            <span class="label">Area:</span>
-            <span class="value"></span> 
-          </div> -->
-          <div class="info-item">
-            <span class="label">Address:</span>
-            <span class="value">{{ order.distributor.address }}</span>
+          <div class="info-grid">
+            <div class="info-item">
+              <span class="label">Distributor Name:</span>
+              <span class="value">{{ orderDetail.order.distributor.distributorName }} - {{
+                orderDetail.order.distributor.area.areaName }}</span>
+            </div>
+
+          </div>
+          <div class="info-grid">
+            <div class="info-item">
+              <span class="label">Weight Per Unit (Kg):</span>
+              <span class="value">{{ orderDetail.productInformation.weightPerUnit }} kg</span>
+            </div>
+            <div class="info-item">
+              <span class="label">Manufacture Date:</span>
+              <span class="value">
+                {{ orderDetail.manufactureDate | date: 'dd/MM/yyyy' }}
+              </span>
+
+            </div>
           </div>
         </div>
+        <!-- Distributor Information -->
+        <!-- <div class="info-section">
+          <h3 class="section-title">Distributor Information</h3>
+          
+        </div> -->
+
       </div>
-
-    </div>
-
-    <!-- Order Line Detail -->
-    <div class="info-section" *ngIf="orderLineDetails">
+      <div class="info-section" *ngIf="sensorRecord.length > 0">
+        <div class="section-header">
+          <h3 class="section-title">Sensor Record {{orderDetail.id}}</h3>
+          <button
+        mat-flat-button
+        color="primary"
+        matTooltipPosition="left"
+        class="m-l-8"
+        matTooltipHideDelay="100000"
+        (click)="addReplaceUnit(orderDetail.id)"
+      >
+        <mat-icon>add</mat-icon> <span fxHide.xs>Add Replace Unit</span>
+      </button>
+        </div>
+        <div class="info-content" >
+          <table class="table">
+            <thead >
+              <tr>
+                <th>Line</th>
+                <th>Units</th>
+                <th>Weight</th>
+                <th>Time</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let item of sensorRecord">
+                <td>{{ item.lineId }}</td>
+                <td>{{ item.sensorUnits }}</td>
+                <td>{{ item.sensorUnits * orderDetail.productInformation.weightPerUnit }}</td>
+                <td>{{ item.recordTime | date: 'yyyy-MM-dd HH:mm:ss' }}</td>
+              </tr>
+            </tbody>
+            <tfoot>
+              <tr>
+                <td><strong>Total:</strong></td>
+                <td><strong>{{ totalUnits }} / {{orderDetail.requestedUnits}}</strong></td>
+                <td><strong>{{ totalWeight }} / {{orderDetail.requestedWeight}}</strong></td>
+                <td *ngIf="orderDetail.replacedUnits"><strong>Đã bổ sung: {{orderDetail.replacedUnits}} túi</strong></td>
+              </tr>
+            </tfoot>
+          </table>
+        </div>
+      </div>
+      <!-- Order Line Detail -->
+      <!-- <div class="info-section" *ngIf="orderLineDetails">
       <h3 class="section-title">Assigned Line</h3>
       <div class="info-grid">
         <div class="info-item">
@@ -175,14 +181,14 @@
           <span class="value">{{ orderLineDetails.createdAt | date: 'dd/MM/yyyy HH:mm:ss' }}</span>
         </div>
       </div>
-    </div>
-  </mat-card-content>
+    </div> -->
+    </mat-card-content>
 
-  <mat-card-actions class="order-actions">
-    <!-- Ẩn combobox nếu đã có OrderLineDetail -->
+    <!-- <mat-card-actions class="order-actions">
+
     <mat-form-field *ngIf="!hasAssignedLine()" appearance="outline" class="line-select">
       <mat-label>Select Line</mat-label>
-      <mat-select [(ngModel)]="selectedLine" [disabled]="order.status === 2 || isStarting">
+      <mat-select [(ngModel)]="selectedLine" [disabled]="orderDetail.order.status === 2 || isStarting">
         <mat-option *ngFor="let line of lines" [value]="line">
           Line {{ line }}
         </mat-option>
@@ -192,11 +198,36 @@
     <button
       mat-raised-button
       color="accent"
-      (click)="startOrder()"
-      [disabled]="hasAssignedLine() || order.status === 2 || isStarting || !selectedLine"
+      
+      [disabled]="hasAssignedLine() || orderDetail.order.status === 2 || isStarting || !selectedLine"
     >
       {{ isStarting ? 'Starting...' : 'Start' }}
     </button>
-  </mat-card-actions>
-</mat-card>
+  </mat-card-actions> -->
+    <!-- Actions -->
+    <mat-card-actions class="order-actions">
+      <!-- Select Line -->
+      <mat-form-field appearance="outline" class="line-select">
+        <mat-label>Select Line</mat-label>
+        <mat-select [(ngModel)]="selectedLine" [disabled]="orderDetail.order.status === 2 || isRunning">
+          <mat-option *ngFor="let line of lines" [value]="line">Line {{ line }}</mat-option>
+        </mat-select>
+      </mat-form-field>
 
+      <!-- Back Button -->
+      <button mat-raised-button color="warn" (click)="goBack()">Back</button>
+
+      <!-- Start/Stop Button -->
+      <button mat-raised-button [color]="isRunning ? 'warn' : 'accent'" (click)="toggleOrder()"
+        [disabled]="orderDetail.order.status === 2 || isStarting || !selectedLine">
+        <mat-progress-spinner *ngIf="isStarting" mode="indeterminate" diameter="20"></mat-progress-spinner>
+        {{ isRunning ? 'Stop' : (isStarting ? 'Starting...' : 'Start') }}
+      </button>
+
+      <!-- Complete Button -->
+      <button mat-raised-button color="primary" (click)="completeOrder()" 
+      [disabled]="totalUnits < orderDetail.requestedUnits">
+        Complete
+      </button>
+    </mat-card-actions>
+  </mat-card>
